<resources>
	<string name="app_name" translatable="false">Matatabi</string>
	<string name="app_label" translatable="false">Matatabi</string>
	<string name="hello" translatable="false">Hello!</string>
	<string name="hello_home" translatable="false">Hello!(Home)</string>
	<string name="hello_search" translatable="false">Hello!(Search)</string>
	<string name="hello_gallery" translatable="false">Hello!(Gallery)</string>
	<string name="hello_garbage" translatable="false">Hello!(Garbage)</string>
	<string name="HomeUI">Dashboard</string>
	<string name="SearchUI">Explore</string>
	<string name="GalleryUI">Gallery</string>
	<string name="Garbage">Settings</string>
	<string name="Dashboard">Dashboard</string>
	<string name="Timeline">Timeline</string>
	<string name="menu_search">Search</string>
	<string name="search_hint">Search</string>
	<string name="btn_add_sns">Share on Twitter</string>
	<string name="action_settings">More</string>
	<string name="btn_add_cancel">Discard</string>
	<string name="btn_add_save">Save</string>
	<string name="btn_add_voice">Voice input</string>
	<string name="txt_add_desc">Recognize your action</string>
	<string name="next_month">Go next month</string>
	<string name="last_month">Go previous month</string>
	<string name="btn_top_search">Save</string>
	<string name="btn_top_add">Recognize what you feel now</string>
	<string name="cancel_check_title">CANCEL_CHECK_TITLE</string>
	<string name="cancel_check_main">CANCEL_CHECK_MAIN</string>
	<string name="add_ok">ADD_OK</string>
	<string name="voice_ng">VOICE_NG</string>
	<string name="loading">LOADING</string>
	<string name="search_non">SEARCH_NON</string>
	<string name="twitter_consumer_key">ve50Thi9yYiYDYGaj7ygQUqBT</string>
	<string name="twitter_consumer_secret">s475qlXPJwzjIgttrpichxfRUonit7gIT0zAMJZHQKBakbjpJ0</string>
	<string name="schedule">予定表</string>
	<string name="option_text">設定</string>
	<string name="search_text">検索</string>
	<string name="album_text">アルバム</string>
	<string name="oauth_text">twitterと連携します</string>
	<string name="tweet_text">tweetします</string>
	<string name="twitter_callback_url">twittercallback://twitter</string>
	
</resources>
