<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_y="22dip"
    android:layout_x="46dip"
    android:orientation="vertical"
    android:gravity="top"
    android:background="#ffffcc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayout_all"

        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >

            <LinearLayout
                android:id="@+id/LinearLayout_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffff66"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextView_last_month"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="#00ffffff"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:text="@string/last_month"
                    android:textColor="#0000ff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/TextView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="3dp"
                    android:background="#00ffffff"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:text="Year/Month"
                    android:textColor="#ff0000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/TextView_next_month"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="#00ffffff"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:text="@string/next_month"
                    android:textColor="#0000ff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            >

            <ListView
                android:id="@+id/ListView_searchlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fadingEdgeLength="30dp"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            >

            <LinearLayout
                android:id="@+id/LinearLayout_foot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffff66"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LinearLayout_search"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffff66"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/EditText_top_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="left|center_vertical"
                        android:inputType="text"
                        android:maxWidth="200dp"
                        android:minWidth="200dp"/>

                    <Button
                        android:id="@+id/Button_top_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/btn_top_search"
                        android:textSize="18sp"/>

                </LinearLayout>

                <Button
                    android:id="@+id/Button_top_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:focusable="true"

                    android:minWidth="200dp"
                    android:text="@string/btn_top_add"
                    android:textSize="18sp"/>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
